# GymConnect

./: .gitignore  Cargo.toml  README.md  backup  defined_schema.surql  test.sh
src/: errors.rs  lib.rs  main.rs
src/adapter/: interface.rs  mod.rs  model.rs
src/authorization/: jwt.rs  token.rs
src/config/: db.rs  environment.rs  mod.rs
src/engine/: axum_engine.rs  engine.rs  mod.rs
src/repo/: client.rs  db.rs  implementation.rs  interface.rs  mod.rs  model.rs  surrealdb.rs
src/repository/: gym.rs  gymnast.rs  mod.rs  personal_trainer.rs  user.rs
src/router/: axum_engine.rs  interface.rs  mod.rs
src/router/axum_router/: auth.rs  gym.rs  gymnast.rs  mod.rs
src/router/axum_router/midleware/: jwt_auth.rs
src/services/: auth.rs  gym.rs  gymnast.rs  interfaces.rs  mod.rs  personal_trainer.rs
src/tests/: connection_tests.rs  mod.rs  repo_tests.rs  rest_api_tests.rs  services_tests.rs
src/tests_backup/: repo_tests.rs  services_tests.rs
