[package]
name = "koteka-gym"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5",features = ["multipart"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.202", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
surrealdb = "1.5.1"
tower-http = { version = "0.5.0", features = ["trace","limit"] }

